<resources>
    <string name="app_name">RickAndMortyRxJava3</string>
    <string name="name">Name</string>
    <string name="character_picture">Character picture</string>
    <string name="status">Status</string>
    <string name="created">Created</string>
    <string name="gender">Gender</string>
    <string name="species">Species</string>
    <string name="again">Again</string>
    <string name="not_internet_connection">Отсутствует интернет</string>
</resources>